Global reformat code 🎨